dhall/tests/type-inference/failure/unit/UnionTypeMixedKinds2.txt
Type error: error: InvalidFieldType
 --> <current file>:1:0
  |
1 | < x : Kind | y : Type >
  | ^^^^^^^^^^^^^^^^^^^^^^^ InvalidFieldType
  |
